# AI_stock_rotation_radar

./: .gitignore  README.md  ep04_sector_radar_numbers.csv  pyproject.toml
data/: current_base_cycle_top3_state.json  current_base_cycle_weekly_core_membership_history.csv  formal_0050_00631l_state.json  formal_0050_00631l_trade_override.json  formal_radar_candidates.latest.csv  private_strategy_state.json  sector_metrics.csv  stock_metrics.csv  theme_map.csv  theme_universe.csv
rotation_radar/: __init__.py  base_cycle_daily_report.py  base_cycle_publish.py  cli.py  daily_pipeline.py  daily_risk_features.py  data_quality.py  deep_metrics.py  demo_data.py  drive_publish.py  formal_candidate_export.py  formal_grade.py  formal_signal.py  historical_replay.py  logging_utils.py  models.py  pipeline_settings.py  price_history.py  private_strategies.py  quote_refresh.py  radar_snapshot.py  report.py  run_manifest.py  schedule_gate.py  scoring.py  sector_metrics_builder.py  stock_screener.py  theme_history.py  theme_metrics.py  valuation_backfill.py
scripts/: build_2308_20250801_adjusted_holding_mark.py  build_private_strategy_report.py  finalize_p1_free_historical_reopen_audit.py  materialize_p3_taifex_trade_oi_compact.py  run_00631l_same_coverage_adjusted_benchmark.py  run_4739_market_transfer_3474_termination_source_package.py  run_4739_post_transition_twse_close_fill.py  run_current_layer0_base_cycle_adjusted_warmup_fill.py  run_current_layer0_base_cycle_price_liquidity_fill.py  run_current_layer0_core_top250_weekly_snapshot_fill.py  run_old_ai7_deferred_6669_close_fill.py  (+33 more)
(+7024 files in other folders)
